[gd_scene load_steps=8 format=3 uid="uid://dsxhjixmx2alb"]

[ext_resource type="Script" uid="uid://dy56ad6hjdfb8" path="res://scenes/ui/input_ui.gd" id="1_58gj8"]
[ext_resource type="PackedScene" uid="uid://cwly48amtp4ae" path="res://scenes/ui/components/move_panel.tscn" id="1_udf7t"]
[ext_resource type="PackedScene" uid="uid://yfm40808a1nc" path="res://scenes/ui/components/skill_button.tscn" id="2_4ioxs"]
[ext_resource type="Texture2D" uid="uid://dknxudijictxw" path="res://texture/skill/73-Return.png" id="3_sfihf"]
[ext_resource type="Script" uid="uid://dqomxnptq07qp" path="res://addons/virtual_joystick/virtual_joystick_instantiator.gd" id="5_ok7ll"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fwrco"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wl8rl"]
bg_color = Color(0.18359, 0.18359, 0.18359, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="InputUI" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -360.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_58gj8")

[node name="MovePanel" parent="." instance=ExtResource("1_udf7t")]
layout_mode = 1
offset_top = -66.0
offset_bottom = -33.0

[node name="SkillButton" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="AtkButton" parent="SkillButton" instance=ExtResource("2_4ioxs")]
layout_mode = 0
offset_left = -122.0
offset_top = -39.0
offset_right = -80.0
offset_bottom = 3.0
key_name = "普攻"

[node name="JumpButton" parent="SkillButton" instance=ExtResource("2_4ioxs")]
layout_mode = 0
offset_left = -182.0
offset_top = -39.0
offset_right = -140.0
offset_bottom = 3.0
bind_key = "jump"
key_name = "跳跃"
image = ExtResource("3_sfihf")

[node name="exit" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = 5.0
offset_right = 36.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_fwrco")
theme_override_styles/normal = SubResource("StyleBoxFlat_wl8rl")
text = "退出编辑模式"

[node name="Virtual Joystick" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 12.0
offset_right = 80.0
offset_bottom = 12.0
grow_vertical = 0
script = ExtResource("5_ok7ll")

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
